# xontrib-hist-navigator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
tests/: test_xontrib_hist_navigator.py
xontrib/: hist_navigator.py  hist_navigator.xsh
