[tool.poetry]
name = "xontrib-hist-navigator"
version = "0.4.1"
description = "A Xonsh plugin to navigate between directories like fish's prevd/nextd"
authors = ["Noortheen Raja <jnoortheen@gmail.com>"]

license = "MIT"
readme = "README.md"

repository = "https://github.com/jnoortheen/xontrib-hist-navigator"
homepage = "https://pypi.org/project/xontrib-hist-navigator"

keywords = ['xontrib', 'xonsh', ]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]


packages = [
    { include="xontrib/*.xsh"},
]

[tool.poetry.dependencies]
python = "^3.8"
xonsh = ">=0.9.17"
prompt-toolkit = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
