[tool.poetry]
name = "xontrib-hist-navigator"
version = "0.6.4"
description = "A Xonsh plugin to navigate between directories like fish's prevd/nextd"
authors = ["Noortheen Raja <jnoortheen@gmail.com>"]

license = "MIT"
readme = "README.md"

repository = "https://github.com/jnoortheen/xontrib-hist-navigator"
homepage = "https://pypi.org/project/xontrib-hist-navigator"

keywords = ['xontrib', 'xonsh']
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]


packages = [{ include = "xontrib" }]

[tool.poetry.dependencies]
python = ">=3.6"
xonsh = ">=0.11"
prompt-toolkit = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
invoke = "^1.4.1"
sh = "^1.14.0"
clize = "^4.1.1"
black = { version = "^20.8b1", allow-prereleases = true }
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
