[project.optional-dependencies]
dev = ["pytest", "black", "build>=0.10.0", "python-semantic-release>=7.33.2"]

[tool.pdm.build]
includes = ["xontrib"]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [{ name = "Noortheen Raja", email = "jnoortheen@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["xonsh>=0.11", "prompt-toolkit"]
name = "xontrib-hist-navigator"
version = "1.0.2"
description = "A Xonsh plugin to navigate between directories like fish's prevd/nextd"
readme = "README.md"
keywords = ["xontrib", "xonsh"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[project.urls]
homepage = "https://pypi.org/project/xontrib-hist-navigator"
repository = "https://github.com/jnoortheen/xontrib-hist-navigator"


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_source = "tag"
build_command = "python -m build"
